# network-scanner

./: .gitignore  CONTRIBUTING.md  INSTALLATION_GUIDE.md  Makefile  PROJECT_STORY.md  README.md  check_repo.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: .pre-commit-config.yaml  codecov.yml  publish.yml  python-tests.yml
docs/: README.ru.md
examples/: basic_scan.py  find_router.py
scripts/: demo_success.py  final_report.py  find_repeater.bat  install.ps1  investigate_device.py  quick.bat  scan_all_networks.py  start.bat  start.ps1
src/network_scanner/: __init__.py  cli.py  scanner.py
tests/: __init__.py  conftest.py  test_cli.py  test_encoding.py  test_scanner.py
