[project]
name = "network-scanner"
version = "1.0.0"
description = "Network web interface scanner for local networks"
readme = "README.md"
authors = [
    {name = "zedraider"},
]
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Security",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.28.0",
    "colorama>=0.4.6; sys_platform == 'win32'",
]

[project.scripts]
network-scanner = "network_scanner.cli:main"

[project.urls]
Homepage = "https://github.com/zedraider/network-scanner"
Repository = "https://github.com/zedraider/network-scanner.git"
Issues = "https://github.com/zedraider/network-scanner/issues"

# ВАЖНО: используем правильный синтаксис
[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "types-requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/network_scanner"]